k8s/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oil-forecaster
  labels:
    name: oil-forecaster
    monitoring: enabled
